[package]
name = "nhentai-downloader"
version = "1.0.0"
edition = "2024"

authors = [ "samu698 <samu(at)cerea(dot)dev>" ]
description = "Downloader for nhentai.net"
repository = "https://github.com/samu698/nhentai-downloader"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "color"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
log = "0.4.27"
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
reqwest = "0.12.15"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
